# BSc-Artificial-Intelligence-Archive

./: README.md
Semester-1-Basic-Programming/code_without_comments/: CMakeLists.txt  README.md
Semester-1-Basic-Programming/code_without_comments/include/: add.h  colors.h  delete.h  display.h  file.h  localization.h  menu.h  reports.h  search.h  sort.h  structs.h  test_data.h  update.h
Semester-1-Basic-Programming/code_without_comments/lang/: en.txt
Semester-1-Basic-Programming/code_without_comments/src/: add.cpp  delete.cpp  display.cpp  file.cpp  localization.cpp  main.cpp  menu.cpp  reports.cpp  search.cpp  sort.cpp  test_data.cpp  update.cpp  utils.cpp
Semester-1-Basic-Programming/include/: add.h  delete.h  menu.h  (+3 more)
Semester-2-Data-Structures-Algorithms/: CMakeLists.txt
Semester-2-Data-Structures-Algorithms/code_with_comments/include/: add.h  colors.h  delete.h  display.h  search.h  sort.h  structs.h  test_data.h
Semester-2-Data-Structures-Algorithms/code_with_comments/lang/: bg.txt  en.txt
Semester-2-Data-Structures-Algorithms/code_with_comments/src/: add.cpp  main.cpp  menu.cpp  search.cpp  sort.cpp  test_data.cpp  utils.cpp
Semester-2-Data-Structures-Algorithms/code_without_comments/: README.md
Semester-2-Data-Structures-Algorithms/code_without_comments/include/: add.h  delete.h  display.h  menu.h  reports.h  search.h  sort.h  structs.h  test_data.h  utils.h
Semester-2-Data-Structures-Algorithms/include/: menu.h  reports.h  utils.h
Semester-2-Data-Structures-Algorithms/src/: display.cpp  localization.cpp  reports.cpp  search.cpp  structs.cpp
(+36 files in other folders)
